Bug 230124 - QIF export date field problem
Summary: QIF export date field problem
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-03-09 20:18 UTC by Toan
Modified: 2010-03-20 15:11 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Toan 2010-03-09 20:18:53 UTC
Version:           3.96-svn (using KDE 4.3.2)
Compiler:          gcc 4.4.1 
OS:                Linux
Installed from:    Compiled From Sources


I tried QIF export. The resultant file has problems with date field. Some entries have year, some don't. 

Also, the date doesn't honor localization. I live in the US, and the date format is MM/DD/YYYY. KMM exports QIF file with the date field as DD.MM.YYYY
Comment 1 Thomas Baumgart 2010-03-20 15:11:09 UTC
SVN commit 1105533 by tbaumgart:

Show tabs for date format and monetary symbols in QIF profile editor. It is required for QIF export.

After string freeze, I want to add a note on both tabs that they are only used for QIF export.

BUG: 230124

 M  +0 -4      mymoneyqifprofileeditor.cpp  
 M  +92 -92    mymoneyqifprofileeditordecl.ui  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1105533