Show tabs for date format and monetary symbols in QIF profile editor. It is required for QIF export.

After string freeze, I want to add a note on both tabs that they are only used for QIF export.

BUG: 230124

svn path=/trunk/playground/office/kmymoney/; revision=1105533